--- a/cart.html
+++ b/cart.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content=""> 
+        <meta name="description" content="">
         <meta name="author" content="">
         <title>Ostukorv</title>
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!-- minu CSS -->
         <link rel="stylesheet" href="custom.css">
     </head>
@@ -17,8 +17,8 @@
         <header class="py-2">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12 my-3 text-center"><img src="logo2.png" width="50%"></div>              
-                </div>          
+                    <div class="col-lg-12 my-3 text-center"><img src="logo2.png" width="50%"></div>
+                </div>
             </div>
         </header>
         <!-- navigatsioon -->
@@ -30,32 +30,33 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="#">Uued tooted</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Vannitooted</a> 
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
-                            <a class="dropdown-item" href="#">Vannisoolad</a> 
-                            <a class="dropdown-item" href="#">Vannipiimad</a> 
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Vannitooted</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Vannisoolad</a>
+                            <a class="dropdown-item" href="#">Vannipiimad</a>
                             <a class="dropdown-item" href="#">Vannipommid</a>
                             <a class="dropdown-item" href="list.html">Seebid ja du&scaron;igeelid</a>
-                        </div> 
-                    </li> 
-                    <li class="nav-item dropdown"> 
-                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kehahooldus</a> 
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
-                            <a class="dropdown-item" href="#">Kehakreemid</a> 
-                            <a class="dropdown-item" href="#">Keha&otilde;lid</a> 
-                            <a class="dropdown-item" href="#">Kehakoorijad</a> 
-                            <a class="dropdown-item" href="#">Deodorandid</a> 
-                            <a class="dropdown-item" href="#">K&auml;te ja jalgade hooldus</a>  
-                        </div> 
-                    </li> 
-                    <li class="nav-item dropdown"> 
-                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">N&auml;ohooldus</a> 
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
-                            <a class="dropdown-item" href="#">Puhastus ja toniseerimine</a> 
-                            <a class="dropdown-item" href="#">Niisutus ja toitmine</a> 
-                            <a class="dropdown-item" href="#">Koorijad ja maskid</a> 
-                        </div> 
-                    </li> 
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kehahooldus</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Kehakreemid</a>
+                            <a class="dropdown-item" href="#">Keha&otilde;lid</a>
+                            <a class="dropdown-item" href="#">Kehakoorijad</a>
+                            <a class="dropdown-item" href="#">Deodorandid</a>
+                            <a class="dropdown-item" href="#">K&auml;te ja jalgade hooldus</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">N&auml;ohooldus</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Puhastus ja toniseerimine</a>
+                            <a class="dropdown-item" href="#">Niisutus ja toitmine</a>
+                            <a class="dropdown-item" href="#">Koorijad ja maskid</a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a href="meist.html" class="nav-link">Meist</a></li>
                 </ul>
                 <!-- search -->
                 <form class="form-inline m-2 my-lg-0">
@@ -64,8 +65,8 @@
                 </form>
             </div>
             <!-- cart -->
-            <a href="cart.html"><button class="btn btn-dark my-2 my-sm-0" type="submit"><svg class="lnr lnr-cart"><use xlink:href="#lnr-cart"></use></svg></button></a>
-        </nav> 
+            <button class="btn btn-dark my-2 my-sm-0 text-muted" type="submit"><svg class="lnr lnr-cart"><use xlink:href="#lnr-cart"></use></svg></button>
+        </nav>
         <section>
             <!-- breadcrumb -->
             <nav aria-label="breadcrumb" >
@@ -80,7 +81,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 d-flex align-items-start flex-column">
-                        <div class="mb-auto p-2"><h4>Ostukorvis on 1 toode</h4></div>    
+                        <div class="mb-auto p-2"><h4>Ostukorvis on 1 toode</h4></div>
                         <div class="mb-auto p-2 row">
                             <div class="col-lg-6">
                                 <img src="soap.png" width="100%">
@@ -95,7 +96,7 @@
                                         <option>3</option>
                                     </select>
                                 <br/>
-                            </div>            
+                            </div>
                         </div>
                         <div class="p-2">
                             <p>Tarne: <span class="text-primary">tasuta</span></p>
@@ -106,24 +107,91 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                    <!-- TODO! --->
-                    </div>           
-                </div>   
-            </div>
-        </section>
-        <!-- jalus -->
-        <footer class="bg-light">
-            <div class="container-fluid">
-                <div class="row">
-                    <!-- TODO! -->
-                    <div class="col-lg-12 text-center"><p>Footer</p></div>
+                        <form class="border p-3 pt-5 pr-5 shadow-sm">
+
+                            <div class="form-group mb-4">
+                                <label for="nimi"><h5>Sisesta nimi</h5></label>
+                                <input type="text" placeholder="Ülli Õpilane" id="nimi" class="form-control">
+                                <small class="form-text text-muted float-right">Nimi mis ilmub arvel.</small>
+                            </div>
+                            <div class="form-group mb-4">
+                                <label for="email"><h5>Sisesta email</h5></label>
+                                <input type="email" id="email" placeholder="mail@mail.ee" class="form-control">
+                                <small class="form-text text-muted float-right">Email kuhu arve saadetakse.</small>
+                            </div>
+                            <div class="form-group mb-8">
+                                <h5>Tarneviis</h5>
+
+                                    <div class="form-check">
+                                        <input type="radio" name="tarne" id="tarneIse" value="0" class="form-check-input">
+                                        <label for="tarneIse" class="form-check-label">Tulen ise järgi</label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input type="radio" name="tarne" id="tarnePost" value="1" class="form-check-input">
+                                        <label for="tarnePost" class="form-check-label">Kuller</label>
+                                    </div>
+                                <div class="form-check">
+                                    <input type="radio" name="tarne" id="tarneKink" value="1" class="form-check-input">
+                                    <label for="tarneKink" class="form-check-label">Kingitus</label>
+                                </div>
+                            </div>
+                            <div class="form-group mb-4">
+                                <label for="makseviis" class="control-label"><h5>Vali makseviis</h5></label>
+                                <select id="makseviis" class="form-control">
+
+                                    <option>Deebet</option>
+                                    <option selected>Panga link</option>
+                                    <option>Ülekanne</option>
+
+                                </select>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </footer>       
+        </section>
+        <!-- jalus --->
+        <footer class="bg-light">
+            <div class="col">
+
+                <div class="row pb-5">
+
+                    <div class="col-6">
+                        <ul class="float-left list-inline">
+                            <li>Tel - <a href="#">555 5555</a></li>
+                            <li>Mail - <a href="#">mail@mail.ee</a></li>
+                            <li>Asukoht - <span>Mustika 15</span></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-6">
+                        <ul class="float-right list-inline">
+                            <li class="p-1"><a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                     class="bi bi-facebook" viewBox="0 0 16 16">
+                                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                                </svg>
+                            </a></li>
+                            <li class="p-1"><a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                     class="bi bi-instagram" viewBox="0 0 16 16">
+                                    <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+                                </svg>
+                            </a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <p>&copy; Bootstrap_4 2021</p>
+                </div>
+
+            </div>
+        </footer>
         <!-- jQuery, Popper.js, Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
     </body>
-</html>         
+</html>
