--- a/list.html
+++ b/list.html
@@ -1,16 +1,10 @@
-<!doctype html>
-<html lang="ee">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Avaleht</title>
-    <!-- Bootstrap CSS -->
+    <meta charset="UTF-8">
+    <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- minu CSS -->
     <link rel="stylesheet" href="custom.css">
 </head>
 <body>
@@ -38,7 +32,7 @@
                     <a class="dropdown-item" href="#">Vannisoolad</a>
                     <a class="dropdown-item" href="#">Vannipiimad</a>
                     <a class="dropdown-item" href="#">Vannipommid</a>
-                    <a class="dropdown-item" href="list.html">Seebid ja du&scaron;igeelid</a>
+                    <a class="dropdown-item active" href="list.html">Seebid ja du&scaron;igeelid</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -74,6 +68,9 @@
         </form>
     </div>
     <!-- cart -->
+    <!--
+    <svg class="lnr mt-auto mr-3 my-3 lnr-cart"><use xlink:href="#lnr-cart"></use></svg>
+    -->
     <a href="cart.html">
         <button class="btn btn-dark my-2 my-sm-0" type="submit">
             <svg class="lnr lnr-cart">
@@ -86,87 +83,136 @@
 <section>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-white my-2 ml-2">
-
-            <li class="breadcrumb-item active" aria-current="page">Avaleht</li>
-
+            <!-- это иконка с домиком, но у меня не получилось её выровнять нормально
+            <li class="breadcrumb-item active" aria-current="page"><button class="btn btn-link btn-lg my-2 my-sm-0" type="submit"><svg class="lnr lnr-home"><use xlink:href="#lnr-home"></use></svg></button></li>
+            -->
+            <li class="breadcrumb-item"><a href="index.html">Avaleht</a></li>
+            <li class="breadcrumb-item">Vannitooted</li>
+            <li class="breadcrumb-item active" aria-current="page">Seebid ja du&scaron;igeelid</li>
         </ol>
     </nav>
 </section>
-<!-- jumbotron --->
+
 <section>
-    <div class="jumbotron">
+    <form class="form-inline mb-4">
 
-        <h1 class="display-4">Seebid ja beebid</h1>
-        <p class="lead"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolore dolorem facilis fuga incidunt inventore labore maxime molestias natus nemo numquam, possimus praesentium quasi saepe temporibus, ut veritatis, voluptatem? Qui!</span>
-        </p>
+        <div class="form-group" >
 
-    </div>
+            <label for="sort" class="control-label col-lg-4">Sorteeri</label>
+
+            <select class="form-control col-lg-8" id="sort">
+
+                <option>Populaarsemad</option>
+                <option>Odavamad enne</option>
+                <option>Kallimad enne</option>
+
+            </select>
+
+        </div>
+
+    </form>
 </section>
-<!-- tooted --->
+
 <section>
     <div class="container">
-        <h2 class="h mb-3">TOP</h2>
         <div class="row">
-            <div class="col-md-4 mb-4">
+
+            <div class="col-md-3 md-4">
                 <div class="card shadow-sm border-0 h-100 text-center">
-                    <a href="#"><img src="soap.png" alt="" class="card-img-top"></a>
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
                     <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 1</a></h5>
-                        <p class="text-muted card-text"> 15.99&#8364;</p>
-                        <a role="button" href="toode.html" class="btn btn-outline-dark">Vaata</a>
+                        <h5><a href="" class="text-dark">Toode 1</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="toode.html" role="button" class="btn btn-outline-dark">Vaata</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
+
+            <div class="col-md-3 md-4">
+                <div class="card shadow-sm border-0 h-100 text-center">
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
                     <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 2</a></h5>
-                        <p class="text-muted card-text"> 12.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
+                        <h5><a href="" class="text-dark">Toode 2</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="#" role="button" class="btn btn-outline-dark">Vaata</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
+
+            <div class="col-md-3 md-4">
+                <div class="card shadow-sm border-0 h-100 text-center">
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
                     <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 3</a></h5>
-                        <p class="text-muted card-text"> 9.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
+                        <h5><a href="" class="text-dark">Toode 3</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="#" role="button" class="btn btn-outline-dark">Vaata</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
+
+            <div class="col-md-3 md-4">
+                <div class="card shadow-sm border-0 h-100 text-center">
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
                     <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 4</a></h5>
-                        <p class="text-muted card-text"> 18.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
+                        <h5><a href="" class="text-dark">Toode 4</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="#" role="button" class="btn btn-outline-dark">Vaata</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
+
+            <div class="col-md-3 md-4">
+                <div class="card shadow-sm border-0 h-100 text-center">
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
                     <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 5</a></h5>
-                        <p class="text-muted card-text"> 1.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
+                        <h5><a href="" class="text-dark">Toode 5</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="#" role="button" class="btn btn-outline-dark">Vaata</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
+
+            <div class="col-md-3 md-4">
+                <div class="card shadow-sm border-0 h-100 text-center">
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
                     <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 6</a></h5>
-                        <p class="text-muted card-text"> 5.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
+                        <h5><a href="" class="text-dark">Toode 6</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="#" role="button" class="btn btn-outline-dark">Vaata</a>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-3 md-4">
+                <div class="card shadow-sm border-0 h-100 text-center">
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
+                    <div class="card-body">
+                        <h5><a href="" class="text-dark">Toode 7</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="#" role="button" class="btn btn-outline-dark">Vaata</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 md-4">
+                <div class="card shadow-sm border-0 h-100 text-center">
+                    <a href=""><img src="soap.png" alt="" class="card-img-top"></a>
+
+                    <div class="card-body">
+                        <h5><a href="" class="text-dark">Toode 8</a></h5>
+                        <p class="text-muted card-text">15.99&#8364;</p>
+                        <a href="#" role="button" class="btn btn-outline-dark">Vaata</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
@@ -208,7 +254,7 @@
 
     </div>
 </footer>
-<!-- jQuery, Popper.js, Bootstrap JS -->
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
