--- a/toode.html
+++ b/toode.html
@@ -1,12 +1,8 @@
-<!doctype html>
-<html lang="ee">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Avaleht</title>
+    <meta charset="UTF-8">
+    <title>Toode</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -74,6 +70,9 @@
         </form>
     </div>
     <!-- cart -->
+    <!--
+    <svg class="lnr mt-auto mr-3 my-3 lnr-cart"><use xlink:href="#lnr-cart"></use></svg>
+    -->
     <a href="cart.html">
         <button class="btn btn-dark my-2 my-sm-0" type="submit">
             <svg class="lnr lnr-cart">
@@ -85,90 +84,49 @@
 <!-- breadcrumb -->
 <section>
     <nav aria-label="breadcrumb">
-        <ol class="breadcrumb bg-white my-2 ml-2">
+        <ol class="breadcrumb bg-white ml-2">
 
-            <li class="breadcrumb-item active" aria-current="page">Avaleht</li>
+            <li class="breadcrumb-item"><a href="index.html">Avaleht</a></li>
+            <li class="breadcrumb-item">Vannitooted</li>
+            <li class="breadcrumb-item"><a href="list.html">Seebid ja du&scaron;igeelid</a></li>
+            <li class="breadcrumb-item active">Toode 1</li>
 
         </ol>
     </nav>
 </section>
-<!-- jumbotron --->
-<section>
-    <div class="jumbotron">
 
-        <h1 class="display-4">Seebid ja beebid</h1>
-        <p class="lead"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolore dolorem facilis fuga incidunt inventore labore maxime molestias natus nemo numquam, possimus praesentium quasi saepe temporibus, ut veritatis, voluptatem? Qui!</span>
-        </p>
-
-    </div>
-</section>
-<!-- tooted --->
 <section>
+
     <div class="container">
-        <h2 class="h mb-3">TOP</h2>
+
         <div class="row">
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center">
-                    <a href="#"><img src="soap.png" alt="" class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 1</a></h5>
-                        <p class="text-muted card-text"> 15.99&#8364;</p>
-                        <a role="button" href="toode.html" class="btn btn-outline-dark">Vaata</a>
-                    </div>
-                </div>
+
+            <div class="col-lg-6"><img src="soap.png" class="img-fluid"/></div>
+
+            <div class="col-lg-6">
+
+                <h2 class="mb-3"> Toode 1</h2>
+
+                <h4 class="mb-3"> 15.99&#8364;</h4>
+
+                <h4 class="mb-2"> Kirjeldus</h4>
+
+                <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempor gravida ipsum,
+                    non mollis lorem luctus ac. Proin interdum tortor a metus efficitur blandit vitae vitae diam. Donec
+                    tortor leo, efficitur ultricies augue vel, consectetur ultrices lacus. Donec sollicitudin eleifend
+                    dolor et viverra. Cras ornare velit dapibus nisl gravida maximus. In vulputate semper leo non
+                    ultrices. Fusce leo sem, dapibus quis turpis sed, convallis consectetur metus. Integer eget quam sed
+                    leo pellentesque feugiat eget in urna. Praesent eu enim velit. Suspendisse eget consequat
+                    turpis.</p>
+
+                <a href="cart.html" class="btn btn-outline-dark btn-lg mb-3">Lisa ostukorvi</a>
+
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 2</a></h5>
-                        <p class="text-muted card-text"> 12.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 3</a></h5>
-                        <p class="text-muted card-text"> 9.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 4</a></h5>
-                        <p class="text-muted card-text"> 18.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 5</a></h5>
-                        <p class="text-muted card-text"> 1.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt=""
-                                                                                        class="card-img-top"></a>
-                    <div class="card-body">
-                        <h5><a href="#" class="text-dark">Toode 6</a></h5>
-                        <p class="text-muted card-text"> 5.99&#8364;</p>
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-                    </div>
-                </div>
-            </div>
+
         </div>
+
     </div>
+
 </section>
 <!-- jalus --->
 <footer class="bg-light">
@@ -208,6 +166,7 @@
 
     </div>
 </footer>
+
 <!-- jQuery, Popper.js, Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -219,5 +178,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
+
 </body>
 </html>
